use navigate and add login button to landing

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 	font-family: Inter, sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 @font-face {
 	font-family: Inter;
 	font-weight: normal;
