perfect circle with min

--- a/src/styles/DesktopSidebar.module.scss
+++ b/src/styles/DesktopSidebar.module.scss
@@ -19,6 +19,8 @@
 
             .color {
                 border-radius: 50%;
+                min-width: 15px;
+                min-height: 15px;
                 width: 15px;
                 height: 15px;
             }
