--- a/src/styles/NewTask.module.scss
+++ b/src/styles/NewTask.module.scss
@@ -34,6 +34,12 @@
     box-shadow: 0px 5px 15px 0 rgba(0, 0, 0, 0.16);
 
     margin-top: 1rem;
+
+    cursor: pointer;
+
+    &:hover {
+        background-color: #2361ff;
+    }
 }
 
 .tags {
