--- a/src/styles/Landing.module.scss
+++ b/src/styles/Landing.module.scss
@@ -62,6 +62,7 @@
     box-shadow: 0px 24px 48px 0 rgba(0, 0, 0, 0.16);
     color: white;
     margin-top: 3rem;
+    cursor: pointer;
 }
 
 .metaText {
