--- a/src/styles/DesktopSidebar.module.scss
+++ b/src/styles/DesktopSidebar.module.scss
@@ -1,10 +1,9 @@
 .parent {
     height: 100%;
     width: 20rem;
-    background-color: #8886ff;
+    background-color: var(--sidebar);
     padding: 1rem;
     box-sizing: border-box;
-    display: fixed;
 
     .items {
         display: flex;
