--- a/src/styles/Prefs.module.scss
+++ b/src/styles/Prefs.module.scss
@@ -2,14 +2,29 @@
     text-transform: uppercase;
     font-weight: normal;
     padding-left: 1rem;
+    margin-top: 1rem;
 }
 
 .group {
     padding-left: 1rem;
     display: flex;
-    gap: .5rem;
+    gap: 0.5rem;
     align-items: center;
     font-weight: bold;
+}
+
+.group.vertical {
+    flex-direction: column;
+    font-weight: normal;
+    align-items: flex-start;
+
+    p {
+        margin: 0;
+    }
+
+    b {
+        margin-top: .5rem;
+    }
 }
 
 .action {
@@ -17,7 +32,7 @@
     color: rgb(75, 75, 255);
     display: flex;
     align-items: center;
-    gap: .25rem;
+    gap: 0.25rem;
     cursor: pointer;
 }
 
@@ -26,7 +41,7 @@
     font-weight: bold;
     display: flex;
     align-items: center;
-    gap: .25rem;
+    gap: 0.25rem;
     cursor: pointer;
 }
 
