--- a/src/styles/NewTask.module.scss
+++ b/src/styles/NewTask.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/Buttons.module.scss";
+
 .parent {
     height: 100%;
     padding: 1rem;
@@ -16,29 +18,6 @@
         font-size: 1.5rem;
         word-break: break-all;
         white-space: pre-wrap;
-    }
-}
-
-.objectiveButton {
-    width: 100%;
-    height: 2rem;
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: white;
-    background-color: #0249ff;
-
-    border-radius: 5px;
-
-    border: none;
-
-    box-shadow: 0px 5px 15px 0 rgba(0, 0, 0, 0.16);
-
-    margin-top: 1rem;
-
-    cursor: pointer;
-
-    &:hover {
-        background-color: #2361ff;
     }
 }
 
