--- a/src/styles/Register.module.scss
+++ b/src/styles/Register.module.scss
@@ -4,3 +4,14 @@
     height: 100%;
     padding: 1rem;
 }
+
+.passwordMeter {
+    width: 100%;
+}
+
+.group {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    font-weight: bold;
+}
